--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
           <div class="col-md-4">
             <div class="work-box">
               <div class="work-img">
-                <a href="https://akarshgkumar.github.io/amazon-clone/"><img src="assets/img/work-3.webp" alt="" class="img-fluid" /></a>
+                <a href="https://akarshgkumar.github.io/amazon-responsive/"><img src="assets/img/work-3.webp" alt="" class="img-fluid" /></a>
               </div>
               <div class="work-content">
                 <div class="row">
