linkedin link updated

--- a/index.html
+++ b/index.html
@@ -527,6 +527,10 @@
                     <div class="socials">
                       <ul>
                         <li>
+                          <a href="https://www.linkedin.com/in/akarshgkumar/"><span class="ico-circle"><i
+                                class="bi bi-linkedin"></i></span></a>
+                        </li>
+                        <li>
                           <a href="https://github.com/akarshgkumar"><span class="ico-circle"><i
                                 class="bi bi-github"></i></span></a>
                         </li>
@@ -537,10 +541,6 @@
                         <li>
                           <a href="https://twitter.com/AkarshGKumar47"><span class="ico-circle"><i
                                 class="bi bi-twitter"></i></span></a>
-                        </li>
-                        <li>
-                          <a href="https://www.linkedin.com/in/akarsh-g-kumar-849523244/"><span class="ico-circle"><i
-                                class="bi bi-linkedin"></i></span></a>
                         </li>
                       </ul>
                     </div>
